// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Should render correctly 1`] = `
<div>
  <div
    role="button"
    style="cursor: pointer;"
    tabindex="0"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
        style="background-image: url(null);"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      />
      <div
        class="card__banner"
      />
    </div>
  </div>
</div>
`;

exports[`<Card /> Should render correctly hrefExternal 1`] = `
<div>
  <a
    href="https://duckduckgo.com/"
    role="button"
    style="text-decoration: none;"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
        style="background-image: url(null);"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      />
      <div
        class="card__banner"
      />
    </div>
  </a>
</div>
`;

exports[`<Card /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="test-custom-classname"
    role="button"
    style="cursor: pointer;"
    tabindex="0"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
        style="background-image: url(null);"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      />
      <div
        class="card__banner"
      />
    </div>
  </div>
</div>
`;
